--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "md5": "^2.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
