--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@babel/preset-react": "^7.17.12",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "bootstrap": "^5.1.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "md5": "^2.3.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
