--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.1.1",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "md5": "^2.3.0",
@@ -36,7 +37,11 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "request": "^2.79.0",
+    "styled-components": "^5.3.5",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
