--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "antd": "^4.21.0",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
@@ -34,8 +35,10 @@
     "html-webpack-plugin": "^5.5.0",
     "md5": "^2.3.0",
     "react": "^18.1.0",
+    "react-autobind": "^1.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.32.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
