--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chequeopreoperacional",
+  "proxy": "http://localhost:5000",
   "version": "1.0.0",
   "description": "chequeo preoperacional react",
   "main": "src/index.js",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/LinaDesalvadorP/chequeoPreoperacional#readme",
   "dependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "antd": "^4.21.0",
