--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-//PORT=5000
-//HOST=us-cdbr-east-06.cleardb.net
-//USER=b4507e22bf916a
-//PASSWORD=415947a7
-//DATABASE=heroku_1471e46196fd0b4
-
 PORT=5000
-HOST=localhost
-USER=TaxiYa
-PASSWORD=taxiYa123
-DATABASE=taxiya
+HOST=us-cdbr-east-06.cleardb.net
+USER=b4507e22bf916a
+PASSWORD=415947a7
+DATABASE=heroku_1471e46196fd0b4
+
+//PORT=5000
+//HOST=localhost
+//USER=TaxiYa
+//PASSWORD=taxiYa123
+//DATABASE=taxiya
