--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "cross-env": "^7.0.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "md5": "^2.3.0",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-autobind": "^1.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "reactstrap": "^9.1.1",
     "redux": "^4.2.0",
     "request": "^2.79.0",
     "styled-components": "^5.3.5",
