--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^18.1.0",
     "react-autobind": "^1.0.6",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.3.1",
