--- a/package.json
+++ b/package.json
@@ -32,17 +32,21 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "md5": "^2.3.0",
     "moment": "^2.29.3",
+    "pastel-color": "^1.0.3",
     "react": "^18.1.0",
     "react-autobind": "^1.0.6",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-chartjs-2": "^4.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.3.1",
