se agrego la obtención de preguntas

--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 PORT=5000
+
+//HOST=34.173.184.96
+//USER=check_car
+//PASSWORD=CheckCar2022
+//DATABASE=CheckCar
+
+
 HOST=us-cdbr-east-06.cleardb.net
 USER=b4507e22bf916a
 PASSWORD=415947a7
