--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "pastel-color": "^1.0.3",
     "react": "^18.1.0",
     "react-autobind": "^1.0.6",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-autosuggest": "^0.5.0",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.32.0",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
